@@ -46,6 +46,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="System.Windows.Controls.Primitives\BulletDecorator.cs" />
     <Compile Include="System.Windows.Controls.Primitives\ButtonBase.cs" />
+    <Compile Include="System.Windows.Controls.Primitives\DragStartedEventArgs.cs" />
+    <Compile Include="System.Windows.Controls.Primitives\DragStartedEventHandler.cs" />
+    <Compile Include="System.Windows.Controls.Primitives\DragDeltaEventArgs.cs" />
+    <Compile Include="System.Windows.Controls.Primitives\DragDeltaEventHandler.cs" />
+    <Compile Include="System.Windows.Controls.Primitives\DragCompletedEventArgs.cs" />
+    <Compile Include="System.Windows.Controls.Primitives\DragCompletedEventHandler.cs" />
     <Compile Include="System.Windows.Controls.Primitives\TickBarPlacement.cs" />
     <Compile Include="System.Windows.Controls.Primitives\TickPlacement.cs" />
     <Compile Include="System.Windows.Controls.Primitives\ItemsChangedEventArgs.cs" />
