@@ -1,0 +1,7 @@
+#if Implementation
+namespace Mono.System.Windows.Controls.Primitives {
+#else
+namespace System.Windows.Controls.Primitives {
+#endif
+	public delegate void DragStartedEventHandler(object sender, DragStartedEventArgs e);
+}
