@@ -1,3 +1,7 @@
+2007-08-02  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* DragCompletedEventArgs.cs, DragCompletedEventHandler.cs, DragDeltaEventArgs.cs, DragDeltaEventHandler.cs, DragStartedEventArgs.cs, DragStartedEventHandler.cs: Added.
+
 2007-08-01  George Giolfan  <georgegiolfan@yahoo.com>
 	
 	* UniformGrid.cs: Implemented layout.
